@@ -5,6 +5,7 @@ Version 4.1.2 (2014-07-xx)
 	Fixed bug where resizing of the editor didn't work since the theme was calling setStyles instead of setStyle.
 	Fixed bug where IE 7 would fail to append html fragments to iframe document when using DomQuery.
 	Fixed bug where the getStyle DOMUtils method would produce an exception if it was called with null as it's element.
+	Fixed bug where the paste plugin would remove the element if the none of the paste_webkit_styles rules matched the current style.
 Version 4.1.1 (2014-07-08)
 	Fixed bug where pasting plain text on some WebKit versions would result in an empty line.
 	Fixed bug where resizing images inside tables on IE 11 wouldn't work properly.
